style.css
:root {
  --dark-grey: #B4B4B8;
  --light-grey: #C7C8CC;
  --dark-beige: #E3E1D9;
  --light-beige: #F2EFE5;
  --green: #7fff73;
  --red: #ff8473;
}

body {
  font-family: 'inter', Tahoma, sans-serif;
  height: 100vh;
  margin: 0;
  display: grid;
  grid-template-columns: 250px 1fr 250px;
}

button,
input,
fieldset {
  font-family: 'inter', Tahoma, sans-serif;
  border: none;
}
fieldset {
  margin: 0;
  padding: 10px;
}

input:focus {
  border: none;
  outline: solid var(--light-beige) 2px;
}
button:active {
  opacity: 70%;
}

/* ASIDE */
aside {
  visibility: visible;
  padding: 10px;
  background-color: var(--light-grey);
  display: grid;
  justify-items: center;
  grid-template-columns: 1fr;
  grid-template-rows: 100px 80px 1fr;
}
.aside-button {
  visibility: visible;
  width: 40px;
  height: 30px;
  padding: 0;
  background: none;
  justify-self: end;
  align-self: start;
}
aside > .form-section {
  width: 230px;
}
.add-project-section {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
.add-project-button {
  padding: 3px;
  background: var(--light-grey);
}
.add-project-button > img {
  width: 20px;
  height: 20px;
  display: block;
}

/* ASIDE FORM */
#project-form {
  display: flex;
  flex-direction: column;
}
#project-form > fieldset {
  display: flex;
  flex-direction: column;
  align-self: center;
}
#project-form > fieldset > input {
  padding: 10px;
  width: 170px;
}

.form-button {
  padding: 10px;
  display: flex;
  justify-content: space-evenly;
}
.submit-project-button,
.cancel-project-button {
  padding: 8px;
}
.submit-project-button {
  background-color: var(--green);
}
.cancel-project-button {
  background-color: var(--red);
}

.project-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.project-section > p {
  text-decoration: underline white 2px;
  text-underline-offset: 2px;
}
.project-button {
  padding: 10px;
  margin-bottom: 5px;
  border: none;
  background: none;
}
.project-button:hover {
  border: none;
  outline: solid white 2px;
  background: var(--light-grey);
}

/* Main */
main {
  padding: 15px;
  display: grid;
  align-items: center;
  align-content: center;
  justify-content: space-around;
}

.main-button-section {
  width: 435px;
}
.main-button-section > button {
  font-size: 20px;
  padding: 10px;
  background: none;
}

.completed-button {
  color: var(--light-grey);
}

/* MAIN FORM */
#todo-form > fieldset {
  display: flex;
  background-color: var(--light-grey);
}
#todo-form > fieldset > fieldset {
  display: flex;
  flex-direction: column;
}
#todo-name,
#todo-date {
  height: 25px;
  padding: 10px;
  color: grey;
}

/* MAIN TODO */
.todo {
  padding: 10px;
  margin-bottom: 10px;
  background-color: var(--light-grey);
  display: grid;
  grid-template-columns: 60px 1fr 90px;
  align-items: center;
}
.checkbox {
  width: 30px;
  height: 30px;
  clip-path: circle(46% at 50% 50%);
  border: none;
}

.time-section {
  display: grid;
  /* grid-template-rows: repeat(3, 1fr); */
}
.time-section > section {
  display: grid;
  grid-template-rows: 50px 1fr;
}
.time-section > section > p {
  text-decoration: underline var(--light-grey) 2px;
  text-underline-offset: 2px;
}

/* FOOTER */
footer {
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
}
.add-todo-button {
  height: 50px;
  width: 50px;
  border-radius: 25px;
  border: none;
  background-color: var(--light-grey);
  display: flex;
  align-items: center;
  justify-content: center;
}
.add-todo-button > img {
  width: 30px;
  height: 30px;
}

.success {
  outline: solid var(--green) 2px;
}
.error {
  outline: solid var(--red) 2px;
}

.hide {
  position: absolute !important;
  top: -9999px !important;
  left: -9999px !important;
}

